# src/adapter/schema/event.ts
@@ -1,6 +1,12 @@
 import { z } from "zod";
 import { Event } from "../../domain/entity/event.js";
 
+export const EventId = z.object({
+  eventId: z.string(),
+});
+
+export type EventId = z.infer<typeof EventId>;
+
 export const EventCreateRequest = z.object({
   name: z.string(),
   description: z.string(),
@@ -10,7 +16,11 @@ export const EventCreateRequest = z.object({
 });
 export type EventCreateRequest = z.infer<typeof EventCreateRequest>;
 
-export const EventCreateResponse = z.object({
+export const EventUpdateRequest = EventCreateRequest;
+
+export type EventUpdateRequest = z.infer<typeof EventUpdateRequest>;
+
+export const EventResponse = z.object({
   id: z.string(),
   name: z.string(),
   description: z.string(),
@@ -18,9 +28,9 @@ export const EventCreateResponse = z.object({
   endDate: z.string().datetime(),
   location: z.string(),
 });
-export type EventCreateResponse = z.infer<typeof EventCreateResponse>;
+export type EventResponse = z.infer<typeof EventResponse>;
 
-export const toEventCreateResponse = (event: Event): EventCreateResponse => ({
+export const toEventCreateResponse = (event: Event): EventResponse => ({
   id: event.id,
   name: event.name,
   description: event.description,
